fixed horizontal scroll

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -182,18 +182,8 @@ input[type="checkbox"] {
   border-top: 50px solid black;
 }
 
-.water-wrapper {
-  z-index: -1;
-  max-width: 100%;
-  height: 0px;
-  position: absolute;
-}
-
-#water {
-  z-index: -1;
-  min-height: 100vh;
-  position: sticky;
-  top: 0;
+.water-wrapper, #water {
+  display: none;
 }
 
 .section-wrapper-a, .section-wrapper-b {
